--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-route": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-ui-bootstrap": "^2.1.3",
+    "angular-ui-grid": "^3.2.9",
     "api-check": "^7.5.5",
     "bootstrap": "^3.3.7"
   }
